--- a/Destiny2/destiny2/js/GameConfig.json
+++ b/Destiny2/destiny2/js/GameConfig.json
@@ -2823,7 +2823,7 @@
 			},
 			{
 				"id": "MG14",
-				"name": "辅助池 - 命定混沌",
+				"name": "命定混沌",
 				"description": "获得异域武器命定混沌 ",
 				"type": "mg",
 				"weight": 0.066667,
@@ -2831,7 +2831,7 @@
 			},
 			{
 				"id": "MG15",
-				"name": "辅助池 - 永劫教派",
+				"name": "永劫教派",
 				"description": "获得异域护甲 永杰安泰 / 永劫雨燕 / 永劫灵魂",
 				"type": "mg",
 				"weight": 0.066667,
@@ -2961,7 +2961,7 @@
 			},
 			{
 				"id": "SG16",
-				"name": "辅助池 - 直击要害",
+				"name": "直击要害",
 				"description": "获得异域武器神圣裁决",
 				"type": "sg",
 				"weight": 0.052632,
@@ -2969,7 +2969,7 @@
 			},
 			{
 				"id": "SG17",
-				"name": "辅助池 - 狼群之首",
+				"name": "狼群之首",
 				"description": "获得异域武器加拉尔号角",
 				"type": "sg",
 				"weight": 0.052632,
@@ -2977,7 +2977,7 @@
 			},
 			{
 				"id": "SG18",
-				"name": "辅助池 - 弱化",
+				"name": "弱化",
 				"description": "获得异域武器牵引器火炮",
 				"type": "sg",
 				"weight": 0.052632,
@@ -2985,7 +2985,7 @@
 			},
 			{
 				"id": "SG19",
-				"name": "辅助池 - 团队核心",
+				"name": "团队核心",
 				"description": "获得虚空分支并且获得异域护甲 奥菲斯钻机 / 获得烈日分支并且获得异域护甲 月之阵营靴 / 获得虚空分支并且获得异域护甲 阿尔法·鲁皮之脊",
 				"type": "sg",
 				"weight": 0.052632,
