--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,7 @@ http {
         error_log /Destiny2/logs/error.log error;
 
         location / {
+            try_files $uri $uri/ /index.htmml;
             root /Destiny2;
             index index.html;
         }
